# ChangeLog for sys-apps/preload
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/preload/ChangeLog,v 1.8 2008/10/28 13:04:57 darkside Exp $

  28 Oct 2008; Jeremy Olexa <darkside@gentoo.org> files/init.d-preload:
  sys-apps/preload - fix another bashisms. bug #244491

*preload-0.6.3-r5 (28 Oct 2008)

  28 Oct 2008; Jeremy Olexa <darkside@gentoo.org> files/conf.d-preload,
  files/init.d-preload, -preload-0.6.3-r4.ebuild, +preload-0.6.3-r5.ebuild:
  sys-apps/preload - final init script fixing to capture the pid properly as
  reported in bug #243832 (thanks for the help Kai). Version bump so people
  get a working (so I think) init script. Removing bashisms, as reported in
  bug #244491 is also fixed with this commit (thanks to Davide Pesavento).
  Hey, 2 bugs in one!

*preload-0.6.3-r4 (24 Oct 2008)

  24 Oct 2008; Jeremy Olexa <darkside@gentoo.org>
  +files/preload-0.6.3-forking-children.patch,
  +files/preload-0.6.3-nice-segfault.patch,
  +files/preload-0.6.3-overlapping-io-bursts.patch, files/conf.d-preload,
  files/init.d-preload, -preload-0.6.3-r1.ebuild, -preload-0.6.3-r3.ebuild,
  +preload-0.6.3-r4.ebuild:
  init script now supports ionice'ing. New patches to improve/optimize
  behavior. Thanks to Kai Krakow for patches and hints. Downgraded ebuild to
  eapi-0 to allow people to get these important chagnes

*preload-0.6.3-r3 (23 Oct 2008)

  23 Oct 2008; Jeremy Olexa <darkside@gentoo.org> files/conf.d-preload,
  files/init.d-preload, -preload-0.6.3-r2.ebuild, +preload-0.6.3-r3.ebuild:
  Remove restart() block from init script. It doesn't do anything on openrc
  (bug #241884) and it causes warnings on baselayout-1 (bug #242578) due to
  poor implementation on my part. We really don't need a restart because a
  stop/start is just as good. Also modify init/conf scripts to better handle
  'default' values.

*preload-0.6.3-r2 (20 Oct 2008)

  20 Oct 2008; Jeremy Olexa <darkside@gentoo.org>