@@ -6,6 +6,8 @@ AUX preload-0.6.3-nice-segfault.patch 1066 RMD160 f0c68a7b6748c58d98e2a949dfee9d
 AUX preload-0.6.3-overlapping-io-bursts.patch 856 RMD160 136c5d885e7b3d5e1923ea03d2ae6be5dd4af714 SHA1 f631f9ee467fa9a4a82c5a59d43e67b520ba4fe7 SHA256 1e92121abfa3549b18d4a7eefa26fa098e25539cc3948c3ffe492598d6ba9ae5
 AUX preload-0.6.3-prefix.patch 850 RMD160 0d3c35c2c269f574a831ccb1c0e6a3b87baf04b2 SHA1 d069aa3a3536dbd6b003ed3035b5931244bed4dd SHA256 166244f1a048126c1a3040c8a247613eeb9aeefb35d10d241ab55f6552aa9ee9
 DIST preload-0.6.3.tar.gz 139587 RMD160 ba0666ee67780961651a99ac60068265d29c288a SHA1 3733693e186ebc8965f164a3fd7afa2cf558fec5 SHA256 de6a79ca1426f8a2710135b78fd9edb34e3a152e9cdd7cfd68166399171f358b
+DIST preload-0.6.4.tar.gz 140750 RMD160 93de2090e7d5c21cdb5e74531dab480117f95c36 SHA1 2313a7f9c8713fbc0efaf649b29dbe36ed0b3945 SHA256 d0a558e83cb29a51d9d96736ef39f4b4e55e43a589ad1aec594a048ca22f816b
 EBUILD preload-0.6.3-r5.ebuild 1846 RMD160 b83c6b0e3fd14ba79cfa68a6c45e96ed95e904d7 SHA1 6661a86454d3fd00a900f371bbc4f3aad067f2d6 SHA256 d51295b015f358186970fd1adab616390c3a25d5406faa2c33a2070383e98a5d
-MISC ChangeLog 2952 RMD160 9cc9cbab16a8c72ae00740e0bdb3cd6f3ce80fb9 SHA1 7fafcc31fd5b459d5233a4312edb6bcbe76b041c SHA256 81fdfde9ee163332f6403e4a89e3c68418538ce35e30abd7109b480132c6cc4a
+EBUILD preload-0.6.4.ebuild 1685 RMD160 59c38f3f5b09e8a284587310d336dfe7b8ff5952 SHA1 9527c5a7c62cfbe38ee5c0d0eb816991758e2cde SHA256 7fa8818c590a0ba1146e397ecdd0c7003ca7923e78c9158b0357a6e400cd2159
+MISC ChangeLog 3083 RMD160 d9268523236bb3850b5e5583139fda65fe17175c SHA1 b6cbc6ff6cca8b5d6229664b96947aef91efb5b8 SHA256 17409c19dac5fc2fd418d6b649bb3e2dabfebe80636c5575f9a814383104d58b
 MISC metadata.xml 503 RMD160 38ab96ae80e53c44b88512bec1409281cf06ef56 SHA1 4196948def119ac92327edf1307cc9a1bd0f4162 SHA256 0cbf6f727b2d3bc82e3a3d949dc9cb003029789718735e32cbc77e28eaa21b24
